welcome.lessons.welcome.loopfor.LoopCourseForest.scala.error
Runner:4: error: illegal start of simple expression
  for(x<-1 to 3){avance();avance();avance();avance();gauche();avance();avance();droite(;avance();avance();avance();avance();gauche();avance();avance();avance();avance()}
                                                                                       ^